--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,53 @@
-.operands {
+* {
+    box-sizing: border-box;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: large;
+    font-weight: 900;
+}
+.calculator {
     display: flex;
+    flex-direction: column;
+    width: 280px;
+    height: 350px;
+    background: gainsboro;
+}
+
+.display {
+    width: 100%;
+    height: 25%;
+    background-color: rgb(50, 47, 47);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.operands {
+    background-color: rgb(135, 124, 124);
+    width: 90%;
+    height: 75%;
+    font-size: xx-large;
+}
+
+
+.buttons {
+    flex: 1;
+    display: flex;
+}
+
+.numbers-result {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px;
+}
+.operations {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+button {
+    border-radius: 50%;
+    width: 60px;
+    height: 50px;
+    padding: 20px;
 }
